// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookImage Component matches the snapshot for a faulty image 1`] = `
<div
  className="FacebookImage__PlaceholderImage-n8g3py-2 cXxLmL"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Select image
</div>
`;

exports[`FacebookImage Component matches the snapshot for a landscape image 1`] = `
<div
  className="FacebookImage__FacebookImageContainer-n8g3py-0 iMUuHP"
  mode="landscape"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    aria-label=""
    className="FacebookImage__StyledImage-n8g3py-1 gtVUaI"
    role="img"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot for a portrait image 1`] = `
<div
  className="FacebookImage__FacebookImageContainer-n8g3py-0 fprZdJ"
  mode="portrait"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    aria-label=""
    className="FacebookImage__StyledImage-n8g3py-1 fBykhG"
    role="img"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot for a square image 1`] = `
<div
  className="FacebookImage__FacebookImageContainer-n8g3py-0 fprZdJ"
  mode="square"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    aria-label=""
    className="FacebookImage__StyledImage-n8g3py-1 ftPmGF"
    role="img"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot for a too small image 1`] = `
<div
  className="FacebookImage__FacebookImageContainer-n8g3py-0 fprZdJ"
  mode="square"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    aria-label=""
    className="FacebookImage__StyledImage-n8g3py-1 dXrmPf"
    role="img"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot in the loading state 1`] = `
<div
  className="FacebookImage__PlaceholderImage-n8g3py-2 cXxLmL"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Select image
</div>
`;
